--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,17 +1,25 @@
 {
-    // Use IntelliSense para saber los atributos posibles.
-    // Mantenga el puntero para ver las descripciones de los existentes atributos.
-    // Para más información, visite: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "Iniciar el programa",
-            "skipFiles": [
-                "<node_internals>/**"
-            ],
-            "program": "${workspaceFolder}\\index.js"
-        }
-    ]
+  // Use IntelliSense to learn about possible attributes.
+
+  // Hover to view descriptions of existing attributes.
+
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+
+  "version": "0.2.0",
+
+  "configurations": [
+    {
+      "name": "Launch via NPM",
+
+      "type": "node",
+
+      "request": "launch",
+
+      "cwd": "${workspaceRoot}",
+
+      "runtimeExecutable": "npm",
+
+      "runtimeArgs": ["run-script", "dev"]
+    }
+  ]
 }
